--- a/nightscout/config.json
+++ b/nightscout/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Nightscout",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "slug": "nightscout",
   "description": "Nightscout acts as a web-based CGM (Continuous Glucose Montinor) to allow multiple caregivers to remotely view a patients glucose data in realtime.",
   "url": "https://github.com/marciogranzotto/addon-nightscout",
@@ -30,6 +30,8 @@
     "keyfile": "privkey.pem",
     "api_key": "",
     "auth_default_roles": "readable",
+    "theme": "colors",
+    "import_config_url": "",
     "plugins": [
       "careportal",
       "boluscalc",
@@ -56,6 +58,8 @@
     "keyfile": "str",
     "api_key": "str",
     "auth_default_roles": "list(admin|denied|status-only|readable|careportal|devicestatus-upload|activity)?",
+    "theme": "list(default|colors|colorblindfriendly)",
+    "import_config_url": "str?",
     "plugins": [
       "str"
     ]
