--- a/.addons.yml
+++ b/.addons.yml
@@ -17,6 +17,6 @@ addons:
     target: telegram-bot-amazon
     image: marciogranzotto/addon-telegram-bot-amazon-{arch}
   prusaslicer-nonvc:
-    repository: marciogranzotto/addon-prusaslicer-nonvc
-    target: prusaslicer-nonvc
-    image: marciogranzotto/addon-prusaslicer-nonvc-{arch}
+    repository: marciogranzotto/prusaslicer-novnc
+    target: prusaslicer-novnc
+    image: marciogranzotto/image-{arch}-addon-prusaslicer-novnc
