:tada: Release of add-on PrusaSlicer 2.5.0-alpha3

--- a/prusaslicer-novnc/config.json
+++ b/prusaslicer-novnc/config.json
@@ -1,7 +1,7 @@
 {
   "name": "PrusaSlicer",
   "slug": "prusaslicer-novnc",
-  "version": "1.0.0",
+  "version": "2.5.0-alpha3",
   "description": "PrusaSlicer NoVNC",
   "url": "https://github.com/marciogranzotto/addon-prusaslicer-novnc",
   "image": "marciogranzotto/image-{arch}-addon-prusaslicer-novnc",
