--- a/nightscout/config.json
+++ b/nightscout/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Nightscout",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "slug": "nightscout",
   "description": "Nightscout acts as a web-based CGM (Continuous Glucose Montinor) to allow multiple caregivers to remotely view a patients glucose data in realtime.",
   "url": "https://github.com/marciogranzotto/addon-nightscout",
@@ -10,6 +10,7 @@
   ],
   "webui": "[PROTO:ssl]://[HOST]:[PORT:5423]",
   "startup": "services",
+  "init": "false",
   "boot": "auto",
   "image": "marciogranzotto/image-{arch}-addon-nightscout",
   "hassio_role": "default",
@@ -29,6 +30,7 @@
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
     "api_key": "",
+    "mongodb_uri": "mongodb://127.0.0.1:27017/admin",
     "auth_default_roles": "readable",
     "theme": "colors",
     "import_config_url": "",
@@ -57,6 +59,7 @@
     "certfile": "str",
     "keyfile": "str",
     "api_key": "str",
+    "mongodb_uri": "str",
     "auth_default_roles": "list(admin|denied|status-only|readable|careportal|devicestatus-upload|activity)?",
     "theme": "list(default|colors|colorblindfriendly)",
     "import_config_url": "str?",
